2006-09-06 Jens Tkotz <jens@peino.de> 1.6-svn-b5

 * Change: Moved printPopupStart from lib/content.php to lib/popup.php

 * Change: makeFormIntro now uses "post" not "POST"

 * Change: removed unneeded param $break from makeSectionTabs()

 * Change: $attrList['name'] = $attrList['id'] = $name; in
           gSubmit()

 * Some HTML output indenting

2006-09-06 Jens Tkotz <jens@peino.de> 1.6-svn-b4

 * Change: Moved userData.inc from html/ to layout folder

 * CHANGE: REMOVED html/ folder

2006-08-14 Jens Tkotz <jens@peino.de> 1.6-svn-b3

 * Fix: Added popups/save_photos.php to saveToInclude List.

 Thanks to Kai.

2006-08-13 Jens Tkotz <jens@peino.de> 1.6-svn-b2

 * Change: Remove mesages when no votes are done in album view.

 * Change: Cleanup code for poll boxes 1-3 in view_album.php
	   Moved general CSS for this into base.css

2006-08-12 Jens Tkotz <jens@peino.de> 1.6-svn-b1

 * Merge from DEV_1_6 branch.
   See Changelog below

   Start of official Gallery 1.6 Development.

2006-08-09 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j109-UNSTABLE

 * Update wz_tooltip.js to 3.38

2006-08-09 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j108-UNSTABLE

 * Update Yahoo! YUI to 0.11.2 (tough IN the files 0.11.0 is written)

 * Update horder/Browser.php

2006-08-07 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j107-UNSTABLE

 * Change: Removed $nls['default']['alignment'] from nls.php and 
	   check against it in lib/lang.php

 * Made returnToConfig() to point to step 1

 * New: returnToDiag()

 * Change: Removed $gallery->browser_language !!

 * Fix: Iconslink gets [] around when no icons are wanted.

 * Little HTML fix slipped in in 106

 * Fix include of header in admin-page. Slipped in in b94.

 * Little siriux change.

 * Fixed layout for Matrix theme when vieving with IE.

 * Fixed appearance in setup/frame_test.php

 * Make Diagnostics Page NOT to open in _blank.

 * General Nicify.

2006-08-06 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j106-UNSTABLE

 ***** NEW *****
