@@ -1,3 +1,13 @@
+2006-09-06 Jens Tkotz <jens@peino.de> 1.6-svn-b7
+
+ * CHANGE: Changed table name for Gallery in joomla! and Mambo to 'gallery16'
+
+2006-09-06 Jens Tkotz <jens@peino.de> 1.6-svn-b6
+
+ * Change: Nicify of login.php, added Javascript for en/disableing action buttons
+
+ * New: Added CSS for disabled buttons in css/screen.css.default
+
 2006-09-06 Jens Tkotz <jens@peino.de> 1.6-svn-b5
 
  * Change: Moved printPopupStart from lib/content.php to lib/popup.php
